--- a/frontend-angular/src/mommoo-library/ui/chip-view/chip-view.component.scss
+++ b/frontend-angular/src/mommoo-library/ui/chip-view/chip-view.component.scss
@@ -22,6 +22,7 @@ $chipViewImgSize: 30px;
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
+  flex-shrink: 0;
 }
 
 #content-wrapper {
