--- a/frontend-angular/src/app/component/main/contents/project-contents/project-feature/project-feature.component.scss
+++ b/frontend-angular/src/app/component/main/contents/project-contents/project-feature/project-feature.component.scss
@@ -1,4 +1,5 @@
 @import "~src/styles";
+@import "~src/mommoo-library/handler/window/size/window-size-handler";
 
 $gutter: 16px;
 
@@ -15,25 +16,56 @@ $gutter: 16px;
 }
 
 .explanation-contents {
-  margin: 0 $gutter $gutter $gutter;
-  padding-bottom: $gutter;
-  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: $gutter * 2;
 
   &:nth-last-child(1) {
-    margin-bottom: 0;
     padding-bottom: 0;
-    border-bottom: none;
   }
 }
 
 .explanation-heading {
-  font-size: 1.2vw;
   font-weight: bold;
   color: $primaryTextColor;
   padding-bottom: $gutter/2;
+  line-height: normal;
+  border-bottom: 1px solid #f0f0f0;
+  margin-bottom: $gutter/2;
 }
 
 .explanation-description {
   color: $secondaryTextColor;
-  font-size: 1vw;
+}
+
+@mixin setExplanationElementFontSize($fontSize) {
+  .explanation-heading {
+    font-size: $fontSize;
+  }
+
+  .explanation-description {
+    font-size: $fontSize *0.83;
+  }
+}
+
+@include basic-large-media-query {
+  @include setExplanationElementFontSize(1.3vw);
+
+  .card-contents {
+    padding: $gutter * 3 !important;
+  }
+}
+
+@include basic-medium-media-query {
+  @include setExplanationElementFontSize(2.6vw);
+
+  .card-contents {
+    padding: $gutter * 2 !important;
+  }
+}
+
+@include basic-small-media-query {
+  @include setExplanationElementFontSize(5vw);
+
+  .card-contents {
+    padding: $gutter !important;
+  }
 }
