--- a/frontend-angular/src/app/component/main/main.component.scss
+++ b/frontend-angular/src/app/component/main/main.component.scss
@@ -4,8 +4,11 @@
   display: block;
 }
 
-#fixed-header-wrapper {
-  z-index:100;
+#header-area-viewport {
+  display: flex;
+  flex-direction: column;
+  z-index: 999;
+  width: 100%;
 }
 
 @include basic-large-media-query {
@@ -19,13 +22,12 @@
     bottom:0;
   }
 
-  #fixed-header-wrapper {
-    width: $headerWidthInLargeMediaQuery;
+  #header-area-viewport {
     height : 100%;
   }
 
   #contents-area {
-    padding-left: $headerWidthInLargeMediaQuery;
+    margin-left: $headerWidthInLargeMediaQuery;
   }
 }
 
@@ -34,15 +36,17 @@
     width : 100%;
   }
 
-  #fixed-header-wrapper {
-    position : fixed; // for ie fixed-header dragging bug, must be set fixed when changed to 3-line menu
-    width: 100%;
+  #header-area-viewport {
+    position : fixed;
+    top:0;
     height : auto;
-    box-shadow : 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+    box-shadow : 0 3px 5px -1px rgba(0,0,0,.2),
+    0 6px 10px 0 rgba(0,0,0,.14),
+    0 1px 18px 0 rgba(0,0,0,.12);
   }
 
   #contents-area {
-    padding-left: 0;
+    margin-left: 0;
   }
 }
 
