## Change MenuListComponent's menu hover animation

--- a/frontend-angular/src/app/component/main/header/menu-list/menu-list.component.html
+++ b/frontend-angular/src/app/component/main/header/menu-list/menu-list.component.html
@@ -1,9 +1,10 @@
 <ul>
   <ng-container *ngFor="let menuItemName of menuNames;">
     <li>
-      <div mommooRipple (click)="menuItemClickEvent(menuItemName)" class="li-text-contents">
+      <span (click)="menuItemClickEvent(menuItemName)"
+            class="menu-item">
         {{menuItemName | uppercase}}
-      </div>
+      </span>
     </li>
   </ng-container>
 </ul>
