--- a/frontend-angular/src/app/component/main/header/header.component.html
+++ b/frontend-angular/src/app/component/main/header/header.component.html
@@ -1,5 +1,5 @@
 <div id="header-guide">
-  <div id="title">Mommoo Portfolio</div>
+  <div id="title" (click)="doHeaderLogoClick()">Mommoo Portfolio</div>
 
   <header-menu-button id="menu-button"
                     (menuButtonEvent)="afterMenuButtonClickEvent($event)"></header-menu-button>
