## Append Logo To Header.

--- a/frontend-angular/src/app/component/main/header/header.component.html
+++ b/frontend-angular/src/app/component/main/header/header.component.html
@@ -1,4 +1,5 @@
 <div id="header-guide">
+  <img id="logo" [src]="logoImagePath" />
   <div id="title" (click)="doHeaderLogoClick()">Mommoo Portfolio</div>
 
   <header-menu-button id="menu-button"
