## Mommoo-Portfolio v2.0.0 Release.
 # remove system of finding resource ( performance and management issue )
  - using the static resource path instead of finding resource algorithm.
  - database's image data is rewritten from only file name to static path.
  - front-end resource strategy also changed to using static resource path.

 # append function
  - build function that download paper resource and view.

 # refactoring code
  - remove unnecessary code. only remain used code at project runtime.
  - solve font-end font loading performance issue.

 # append information
  - append front-end page contents.
  - append page logo image.
  -

--- a/frontend-angular/src/app/component/main/contents/basic-contents/basic-contents.component.html
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/basic-contents.component.html
@@ -1,4 +1,4 @@
-<welcome [appIconPathFinder]="appIconPathFinder"></welcome>
-<profile [profile]="basicContentsData.profile"></profile>
+<welcome [appResourceFinder]="appResourceFinder"></welcome>
+<profile [profile]="basicContentsData.profile" [papers]="appResourceFinder.papers"></profile>
 <about [languageTechs]="basicContentsData.languageTechs"></about>
 <project [basicProjects]="basicContentsData.basicProjects"></project>
