--- a/frontend-angular/src/app/component/main/contents/basic-contents/profile/profile.component.scss
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/profile/profile.component.scss
@@ -1,3 +1,5 @@
+@import '~src/styles';
+
 :host{
   display : flex;
   flex-wrap : wrap;
@@ -20,4 +22,8 @@
   display : block;
   height : 100%;
   margin : auto 0;
+}
+
+.inline-break-word {
+  @include inline-break-word;
 }
