--- a/frontend-angular/src/app/component/main/main.component.html
+++ b/frontend-angular/src/app/component/main/main.component.html
@@ -18,12 +18,12 @@
  -->
 <div id="header-area">
   <div id="header-area-viewport" #headerArea>
-    <view-header [appIconPathFinder]="appIconPathFinder"></view-header>
+    <view-header [appResourceFinder]="appResourceFinder"></view-header>
   </div>
   <!-- Fixed 구조 때문에 요소의 모양을 유지 할 수 없다. 블록 구조를 취하기 위해, block 구조를 살린 view-header 위치 -->
-  <view-header [appIconPathFinder]="appIconPathFinder" #fakeHeader></view-header>
+  <view-header [appResourceFinder]="appResourceFinder" #fakeHeader></view-header>
 </div>
 <div id="contents-area" #contentsArea>
     <router-outlet></router-outlet>
 </div>
-<view-footer [appIconPathFinder]="appIconPathFinder" #footerArea></view-footer>
+<view-footer [appResourceFinder]="appResourceFinder" #footerArea></view-footer>
