## Mommoo-Portfolio v2.1.0 Release.  - removing project card wide property  - removing div's backface-visibility property (mobile text hidden issue)  - complete all of pdf file setting

--- a/frontend-angular/src/app/component/main/contents/basic-contents/project/project.component.html
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/project/project.component.html
@@ -3,7 +3,7 @@
                        [style.padding]="'0'"
                        [maxColumnNum]="masonryColumnLength">
   <mommoo-masonry-tile *ngFor="let projectCard of projectCardList"
-                       [colSpan]="projectCard.columnSpan"
+                       [colSpan]="1"
                        (click)="onCardClickListener(projectCard.title)"
                        [style.cursor]="'pointer'">
     <mommoo-card [cardWidth]="'fit'" [cardHeight]="'wrap'">
