--- a/frontend-angular/src/app/component/main/contents/basic-contents/welcome/welcome.component.html
+++ b/frontend-angular/src/app/component/main/contents/basic-contents/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <banner [title]="getBannerTitle()" [descriptions]="getBannerDescriptions()"></banner>
 <div id="pdf-guide">
   <p>혹시 간편하게 정리된 PDF 포트폴리오를 보고 싶으신가요?</p>
-  <mommoo-button>
+  <mommoo-button (click)="viewPDFPortfolio()">
     <div id="flex-row-box">
       <img draggable="false" [src]="PDFImagePath" alt="PDF 로고"/>
       PDF로 보기
